# topics

./: AGENTS.md  Cargo.toml  Dockerfile  README.md  RELEASING.md  rust-toolchain.toml
.github/workflows/: ci.yml
benches/: engine.rs  wal_scaling.rs
docs/: API.md  ARCHITECTURE.md  ASYNC_ROUTER_DESIGN.md  BENCHMARKS.md  COMPARISON.md  DESIGN.md  FAULT_TESTING.md  INTERNALS.html  ROADMAP.md  STORAGE_FORMATS.md  STORAGE_GUARANTEES.md
docs-app/: package-lock.json  package.json
docs-app/app/: globals.css  layout.tsx
docs-app/components/: base.ts  logo.tsx
docs-app/content/: index.mdx
docs-app/content/api/: conventions.mdx  deletion.mdx  errors.mdx  health-metrics.mdx  index.mdx  queues.mdx  reading.mdx  routers.mdx  topics.mdx  watch.mdx  writing.mdx
docs-app/content/comparisons/: index.mdx  vs-cloud-queues.mdx  vs-kafka.mdx  vs-nats.mdx  vs-redis.mdx
docs-app/content/deployment/: _meta.ts  configuration.mdx  docker.mdx  index.mdx  observability.mdx  security.mdx  storage-and-tiering.mdx
docs-app/content/getting-started/: index.mdx  installation.mdx  mental-model.mdx  quickstart.mdx  why-single-node.mdx
docs-app/content/guarantees/: _meta.ts  deletion.mdx  durability.mdx  idempotency.mdx  index.mdx  node-loop-prevention.mdx  ordering-and-cursors.mdx  storage-formats.mdx  storage-integrity.mdx  tombstones.mdx
docs-app/content/guides/: durable-streams.mdx  index.mdx  job-queue.mdx  multi-master.mdx  pubsub.mdx
docs-app/content/how-it-works/: index.mdx  performance.mdx  recovery.mdx  scheduler.mdx  segments-and-snapshots.mdx  wal-and-group-commit.mdx
examples/: forward_fanout_bench.rs
examples/socketio-typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
examples/socketio-typescript/src/: server.ts
examples/socketio-typescript/src/public/: client.js  index.html  styles.css
probe/: Cargo.toml
probe/src/: main.rs
scripts/: test-quick.sh
src/: auth.rs  config.rs  lib.rs  limits.rs  main.rs  serve.rs  testutil.rs  types.rs
src/engine/: box_state.rs  broadcast.rs  eviction.rs  mod.rs  queue.rs  recovery.rs  router.rs  segwriter.rs  snapshot.rs  topic_state.rs
src/http/: health.rs  mod.rs  queue.rs  watch.rs
src/storage/: mod.rs  segment.rs  segstore.rs  sharded_wal.rs  snapshot.rs  testfs.rs  wal.rs
tests/: crash_delete_race.rs  crash_harness.rs  crash_oracle.rs  crash_putbox_update.rs  crash_puttopic_update.rs  crash_recovery.rs  crash_snapshot_delete_race.rs  crash_snapshot_inflight.rs  crash_stage2.rs  fault_batch1.rs  fault_cold_copy.rs  fault_cold_delete.rs  fault_cold_flip.rs  fault_commit_seq.rs  fault_concurrency_a.rs  fault_concurrency_b.rs  fault_durability_classes.rs  fault_idem.rs  fault_lease_a.rs  fault_lease_b.rs  fault_limits_race.rs  fault_queue_durable.rs  fault_reclaim_a.rs  fault_reclaim_b.rs  fault_recovery_a.rs  fault_recovery_b.rs  fault_recovery_c.rs  fault_recovery_d.rs  fault_recovery_e.rs  fault_recovery_f.rs  fault_seg_delete.rs  fault_seg_idx_a.rs  fault_seg_idx_b.rs  fault_seg_seal.rs  fault_seg_write_a.rs  fault_seg_write_b.rs  fault_snap_dirfsync.rs  fault_snap_rename.rs  fault_snap_temp_a.rs  fault_snap_temp_b.rs  (+22 more)
tests/common/: mod.rs
