[package]
name = "streams"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["probe"]
resolver = "2"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.9"
base64 = "0.22.1"
bytes = "1.11.1"
dashmap = "6.2.1"
futures = "0.3.32"
hyper = { version = "1.10", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = ["server-auto", "server-graceful", "service", "tokio"] }
parking_lot = "0.12.5"
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["raw_value"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.11", features = ["trace", "limit"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
criterion = "0.8.2"
http-body-util = "0.1.3"
proptest = "1.11.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "stream", "blocking", "http2"] }
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time", "test-util"] }
tower = { version = "0.5.3", features = ["util"] }

[[bench]]
name = "engine"
harness = false
