[package]
name = "streams-probe"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"

[[bin]]
name = "streams-probe"
path = "src/main.rs"

[dependencies]
argh = "0.1"
futures-util = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
